--- a/src/main/resources/FXML/layout.fxml
+++ b/src/main/resources/FXML/layout.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="App.GUI.LayoutController"
-            prefHeight="400.0" prefWidth="600.0">
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
+<AnchorPane prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="App.GUI.LayoutController">
+   <children>
+      <Button fx:id="playButton" layoutX="311.0" layoutY="291.0" mnemonicParsing="false" onAction="#playPressed" prefHeight="45.0" prefWidth="100.0" text="Play" />
+      <Button fx:id="quitButton" layoutX="311.0" layoutY="366.0" mnemonicParsing="false" onAction="#quitPressed" prefHeight="45.0" prefWidth="100.0" text="Quit" textAlignment="CENTER" />
+   </children>
 </AnchorPane>
