--- a/src/main/resources/FXML/play.fxml
+++ b/src/main/resources/FXML/play.fxml
@@ -9,6 +9,13 @@
       <Button layoutX="14.0" layoutY="65.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="100.0" text="Forage" />
       <Button layoutX="14.0" layoutY="118.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="100.0" text="Mine" />
       <Button fx:id="playBackButton" layoutX="14.0" layoutY="421.0" mnemonicParsing="false" onAction="#playBackPressed" prefHeight="45.0" prefWidth="100.0" text="Back" />
-      <Label fx:id="goldLabel" layoutX="232.0" layoutY="28.0" text="Gold Pouch:" />
+      <Label fx:id="goldLabel" layoutX="191.0" layoutY="28.0" text="Gold Pouch:" />
+      <TextArea fx:id="upgradeTextArea" editable="false" layoutX="191.0" layoutY="254.0" prefHeight="119.0" prefWidth="343.0" wrapText="true" />
+      <Button fx:id="enterButton" layoutX="511.0" layoutY="409.0" mnemonicParsing="false" onAction="#enterButtonPressed" text="Enter" />
+      <TextField fx:id="inputTextField" layoutX="195.0" layoutY="409.0" prefHeight="25.0" prefWidth="307.0" />
+      <Label fx:id="helmetLabel" layoutX="210.0" layoutY="102.0" prefHeight="17.0" prefWidth="127.0" text="Helmet" />
+      <Label fx:id="chestplateLabel" layoutX="210.0" layoutY="132.0" prefHeight="17.0" prefWidth="127.0" text="Chestplate" />
+      <Label fx:id="leggingsLabel" layoutX="210.0" layoutY="163.0" prefHeight="17.0" prefWidth="127.0" text="Leggings" />
+      <Label fx:id="bootsLabel" layoutX="210.0" layoutY="201.0" prefHeight="17.0" prefWidth="127.0" text="Boots" />
    </children>
 </AnchorPane>
